chore: add swagger description and details to endpoints
